--- a/index.html
+++ b/index.html
@@ -2,14 +2,78 @@
 <html>
 <head>
 	<title></title>
+
+	<style type="text/css">
+
+
+body{
+	margin:0px;
+	background-image:url();
+}
+.button{
+	height: 455px;
+	width: 37%;
+
+	display: inline-block;
+
+	font-family: varsity;
+	font-size: 1px;
+	text-align:left;
+
+
+
+	transition:2s;
+
+	background-image: url(cd1.png);
+	background-size: contain;
+	background-repeat: no-repeat;
+	
+}
+
+.button:hover{
+	background-image:url(cd2.gif);
+	transition:2s;
+}
+a{
+	text-decoration: none;
+	color: red;
+}
+
+#journal{
+	background-image: url(disco1.jpg);
+	
+	
+	
+}
+
+#journal:hover{
+	background-image:url(disco2.gif);
+	transition:2s;
+}
+a{
+	text-decoration: none;
+	color: hotpink;
+}
+
+
+	</style>
 </head>
 <body>
 
+
 	<a href="projects.html">
-
-		hello carly
-
+	<div class="button">
+		projects
+	</div>
 	</a>
+
+
+<a href="journal.html">
+	<div id="journal" class="button">
+		journal
+	</div>
+	</a>
+
 
 </body>
 </html>
