--- a/projects.html
+++ b/projects.html
@@ -1,1 +1,78 @@
-PROJECTS PAGE!!!!
+
+<!DOCTYPE html>
+<html>
+<head>
+  <title></title>
+
+  <style type="text/css">
+
+
+body{
+  margin:0px;
+  background-image:url();
+}
+.button{
+  height: 455px;
+  width: 27%;
+
+  display: inline-block;
+
+  font-family: varsity;
+  font-size: 1px;
+  text-align:left;
+
+
+
+  transition:.5s;
+
+  background-image: url(cd1.png);
+  background-size: contain;
+  background-repeat: no-repeat;
+  
+}
+
+.button:hover{
+  background-image:url(cd2.gif);
+  transition:.5s;
+}
+a{
+  text-decoration: none;
+  color: red;
+}
+
+
+
+  </style>
+</head>
+<body>
+<center>
+
+  <a href="projects.html">
+  <div class="button">
+    projects
+  </div>
+  </a>
+
+<a href="aboutme.html">
+  <div id="aboutme" class="button">
+    about me
+  </div>
+  </a>
+
+  
+<a href="journal.html">
+  <div id="journal" class="button">
+    journal
+  </div>
+  </a>
+
+<a href="welcome.html">
+  <div id="welcome" class="button">
+    welcome
+  </div>
+  </a> 
+
+</center>
+
+</body>
+</html>
