--- a/aboutme.html
+++ b/aboutme.html
@@ -1,1 +1,49 @@
-ABOUT ME PAGE!!!
+<!DOCTYPE html>
+<html>
+<head>
+	<title></title>
+
+	<style type="text/css">
+
+
+body{
+	margin:0px;
+	background-image:url();
+}
+.button{
+	height: 2000px;
+	width: 100%;
+
+	display: inline-block;
+
+	font-family: varsity;
+	font-size: 1px;
+	text-align:left;
+
+
+
+	transition:.5s;
+
+	background-image: url(aboutmepage.png);
+	background-size: contain;
+	background-repeat: no-repeat;
+	
+}
+
+
+	</style>
+</head>
+<body>
+<center>
+
+	<a href="projects.html">
+	<div class="button">
+		projects
+	</div>
+	</a>
+
+
+</center>
+
+</body>
+</html>
