--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 
 	<style type="text/css">
 
-
+ 
 body{
 	margin:0px;
 	background-image:url();
@@ -24,74 +24,31 @@ body{
 
 	transition:.5s;
 
-	background-image: url(cd1.png);
+	background-image: url(p1.png);
 	background-size: contain;
 	background-repeat: no-repeat;
 	
-}
-
-.button:hover{
-	background-image:url(cd2.gif);
-	transition:.5s;
 }
 a{
 	text-decoration: none;
 	color: red;
 }
 #aboutme{
-	background-image: url(cherry1.png);
+	background-image: url(aboutme.png);
 	background-size: contain;
 	background-repeat: no-repeat;
 	
 }
 
-#aboutme:hover{
-	background-image:url(cherry2.gif);
-	transition:.2s;
-}
 a{
 	text-decoration: none;
 	color: red;
 }
-#welcome{
-	background-image: url(welcome1.png);
-	
-	height: 800px;
-	width: 88%;
-	
-}
-
-#welcome:hover{
-	background-image:url(welcome2.gif);
-	height: 800px;
-	width: 88%;
-
-	display: inline-block;
-
-	font-family: varsity;
-	font-size: 1px;
-	text-align:left;
-
-	transition:.1s;
-}
-a{
-	text-decoration: none;
-	color: hotpink;
-}
-
-
 
 
  #journal{
-	background-image: url(disco1.jpg);
+	background-image: url(journal.png);
 	
-	
-	
-}
-
-#journal:hover{
-	background-image:url(disco2.gif);
-	transition:.1s;
 }
 a{
 	text-decoration: none;
@@ -124,11 +81,6 @@ a{
 	</div>
 	</a>
 
-<a href="welcome.html">
-	<div id="welcome" class="button">
-		welcome
-	</div>
-	</a> 
 
 </center>
 
