--- a/journal.html
+++ b/journal.html
@@ -1,1 +1,32 @@
-JOURNAL PAGE!!!
+<!DOCTYPE html>
+<html>
+<body>
+
+<h1> creating my website </h1>
+<p> hi! this is my first journal entry, the first thing i did in compsci this year was link my website and put it on the internet using terminal. i'm going to work on my person card for the mojopi github website! i'm very excited to keep coding this year! so far i rly like it !!</p>
+
+<h1> designing my homepage </h1>
+<p1> i started working on my homepage and i'm playing around with different designs and styles. molly has been helping me figure out to hover over an image to transition it into a gif. it looks cool so far but i will probably continue to change it. im glad i am starting to learn some basics so i can continue to use code like this. </p1>
+
+
+
+
+
+
+
+
+
+
+<style>
+body {
+  background-color: white;
+}
+
+body {
+  color: #6C71FF;
+}
+
+h1 {
+  color: #FFA9E2;
+}
+</style>
