--- a/projects.html
+++ b/projects.html
@@ -25,52 +25,53 @@ body{
 
   transition:.5s;
 
-  background-image: url(cd1.png);
+  background-image: url(projectskicover.png);
   background-size: contain;
   background-repeat: no-repeat;
   
 }
 
-.button:hover{
-  background-image:url(cd2.gif);
+body{
+  margin:0px;
+  background-image:url();
+}
+.buttontwo{
+  height: 455px;
+  width: 27%;
+
+  display: inline-block;
+
+  font-family: varsity;
+  font-size: 1px;
+  text-align:left;
+
+
+
   transition:.5s;
-}
-a{
-  text-decoration: none;
-  color: red;
-}
 
-
+  background-image: url(animationonecover.png);
+  background-size: contain;
+  background-repeat: no-repeat;
+  
+}
 
   </style>
 </head>
 <body>
 <center>
 
-  <a href="projects.html">
+  <a href="dadski.html">
   <div class="button">
-    projects
+    project
   </div>
   </a>
 
-<a href="aboutme.html">
-  <div id="aboutme" class="button">
-    about me
+  <a href="animationone.html">
+  <div class="buttontwo">
+    project
   </div>
   </a>
 
-  
-<a href="journal.html">
-  <div id="journal" class="button">
-    journal
-  </div>
-  </a>
-
-<a href="welcome.html">
-  <div id="welcome" class="button">
-    welcome
-  </div>
-  </a> 
 
 </center>
 
