--- a/projects.html
+++ b/projects.html
@@ -55,6 +55,26 @@ body{
   
 }
 
+.buttonthree{
+  height: 455px;
+  width: 27%;
+
+  display: inline-block;
+
+  font-family: varsity;
+  font-size: 1px;
+  text-align:left;
+
+
+
+  transition:.5s;
+
+  background-image: url(bearcover.png);
+  background-size: contain;
+  background-repeat: no-repeat;
+  
+}
+
   </style>
 </head>
 <body>
@@ -68,6 +88,12 @@ body{
 
   <a href="animationone.html">
   <div class="buttontwo">
+    project
+  </div>
+  </a>
+
+  <a href="bearmouse.html">
+  <div class="buttonthree">
     project
   </div>
   </a>
