--- a/projects.html
+++ b/projects.html
@@ -75,6 +75,46 @@ body{
   
 }
 
+.buttonfour{
+  height: 455px;
+  width: 27%;
+
+  display: inline-block;
+
+  font-family: varsity;
+  font-size: 1px;
+  text-align:left;
+
+
+
+  transition:.5s;
+
+  background-image: url(colorchangercover.png);
+  background-size: contain;
+  background-repeat: no-repeat;
+  
+}
+
+.buttonfive{
+  height: 455px;
+  width: 27%;
+
+  display: inline-block;
+
+  font-family: varsity;
+  font-size: 1px;
+  text-align:left;
+
+
+
+  transition:.5s;
+
+  background-image: url(playlistcover.png);
+  background-size: contain;
+  background-repeat: no-repeat;
+  
+}
+
   </style>
 </head>
 <body>
@@ -94,6 +134,18 @@ body{
 
   <a href="bearmouse.html">
   <div class="buttonthree">
+    project
+  </div>
+  </a>
+
+  <a href="squaredscreen.html">
+  <div class="buttonfour">
+    project
+  </div>
+  </a>
+
+  <a href="songplayer.html">
+  <div class="buttonfive">
     project
   </div>
   </a>
