--- a/projects.html
+++ b/projects.html
@@ -115,6 +115,26 @@ body{
   
 }
 
+.buttonsix{
+  height: 455px;
+  width: 27%;
+
+  display: inline-block;
+
+  font-family: varsity;
+  font-size: 1px;
+  text-align:left;
+
+
+
+  transition:.5s;
+
+  background-image: url(soupcover.png);
+  background-size: contain;
+  background-repeat: no-repeat;
+  
+}
+
   </style>
 </head>
 <body>
@@ -146,6 +166,12 @@ body{
 
   <a href="songplayer.html">
   <div class="buttonfive">
+    project
+  </div>
+  </a>
+
+  <a href="soupspawner.html">
+  <div class="buttonsix">
     project
   </div>
   </a>
