--- a/draft.html
+++ b/draft.html
@@ -1,60 +1,51 @@
-<!DOCTYPE html>
 <html>
-  <head>
-    <title>Camera Gallery</title>
-    <style>
-      body {
-        background-color: #000531;
-      }
-      .center {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        height: 100vh;
-      }
-      h1 {
-        text-align: center;
-      }
-      .camera {
-        position: relative;
-        width: 200px;
-        height: 200px;
-        cursor: pointer;
-      }
-      .photo {
-        position: absolute;
-        bottom: -40px;
-        left: 50px;
-        width: 100px;
-        height: 100px;
-        opacity: 0;
-        transition: opacity 0.5s;
-      }
-    </style>
-  </head>
-  <body>
-    <div class="center">
-      <h1>Tap the Camera</h1>
-      <div class="camera" onclick="changeImage()">
-        <img id="camera" src="camera.jpg" alt="camera">
-        <img id="photo" class="photo" src="photo1.jpg" alt="photo">
-      </div>
-    </div>
-    <script>
-      var cameras = ["camera1.jpg", "camera2.jpg", "camera3.jpg", ..., "camera33.jpg"];
-      var photos = ["photo1.jpg", "photo2.jpg", "photo3.jpg", ..., "photo33.jpg"];
-      var cameraIndex = 0;
-      var photoIndex = 0;
 
-      function changeImage() {
-        var camera = document.getElementById("camera");
-        var photo = document.getElementById("photo");
-        camera.src = cameras[cameraIndex];
-        photo.src = photos[photoIndex];
-        photo.style.opacity = 1;
-        cameraIndex = (cameraIndex + 1) % cameras.length;
-        photoIndex = (photoIndex + 1) % photos.length;
-      }
+<head>
+    <title>Skiing Game</title>
+    <style>
+        /* Mountain background */
+        body {
+            background-image: url("mountain.jpg");
+            background-size: cover;
+            margin: 0;
+        }
+        /* Skier image */
+        #skier {
+            position: absolute;
+            bottom: 50px;
+            left: 0px;
+            width: 50px;
+        }
+    </style>
+</head>
+
+<body onkeydown="moveSkier(event)">
+    <img id="skier" src="skier.png" alt="skier">
+    <script>
+        var skier = document.getElementById("skier");
+        var left = 0;
+        var bottom = 50;
+
+        function moveSkier(event) {
+            if (event.keyCode == 37) {
+                // Left arrow key
+                left -= 10;
+                skier.style.left = left + "px";
+            } else if (event.keyCode == 38) {
+                // Up arrow key
+                bottom += 10;
+                skier.style.bottom = bottom + "px";
+            } else if (event.keyCode == 39) {
+                // Right arrow key
+                left += 10;
+                skier.style.left = left + "px";
+            } else if (event.keyCode == 40) {
+                // Down arrow key
+                bottom -= 10;
+                skier.style.bottom = bottom + "px";
+            }
+        }
     </script>
-  </body>
+</body>
+
 </html>
