new color codesketch

--- a/projects.html
+++ b/projects.html
@@ -135,6 +135,26 @@ body{
   
 }
 
+.buttonseven{
+  height: 455px;
+  width: 27%;
+
+  display: inline-block;
+
+  font-family: varsity;
+  font-size: 1px;
+  text-align:left;
+
+
+
+  transition:.5s;
+
+  background-image: url(ccscover.png);
+  background-size: contain;
+  background-repeat: no-repeat;
+  
+}
+
   </style>
 </head>
 <body>
@@ -172,6 +192,12 @@ body{
 
   <a href="soupspawner.html">
   <div class="buttonsix">
+    project
+  </div>
+  </a>
+
+  <a href="colorcodesketch.html">
+  <div class="buttonseven">
     project
   </div>
   </a>
