--- a/songplayer.html
+++ b/songplayer.html
@@ -6,7 +6,7 @@
         /* center the header text and change color to BE0000 */
         h1 {
             text-align: center;
-            font-family: monospace;
+            font-family: icecream;
             color: #BE0000;
         }
     </style>
