adding project to website

--- a/projects.html
+++ b/projects.html
@@ -155,6 +155,26 @@ body{
   
 }
 
+.buttoneight{
+  height: 455px;
+  width: 27%;
+
+  display: inline-block;
+
+  font-family: varsity;
+  font-size: 1px;
+  text-align:left;
+
+
+
+  transition:.5s;
+
+  background-image: url(vdaycover.jpg);
+  background-size: contain;
+  background-repeat: no-repeat;
+  
+}
+
   </style>
 </head>
 <body>
@@ -198,6 +218,12 @@ body{
 
   <a href="colorcodesketch.html">
   <div class="buttonseven">
+    project
+  </div>
+  </a>
+
+  '<a href="vdaycard.html">
+  <div class="buttoneight">
     project
   </div>
   </a>
