adding car project

--- a/projects.html
+++ b/projects.html
@@ -175,6 +175,26 @@ body{
   
 }
 
+.buttonnine{
+  height: 455px;
+  width: 27%;
+
+  display: inline-block;
+
+  font-family: varsity;
+  font-size: 1px;
+  text-align:left;
+
+
+
+  transition:.5s;
+
+  background-image: url(barbiecover.png);
+  background-size: contain;
+  background-repeat: no-repeat;
+  
+}
+
   </style>
 </head>
 <body>
@@ -222,8 +242,14 @@ body{
   </div>
   </a>
 
-  '<a href="vdaycard.html">
+  <a href="vdaycard.html">
   <div class="buttoneight">
+    project
+  </div>
+  </a>
+
+  <a href="barbiecar.html">
+  <div class="buttonnine">
     project
   </div>
   </a>
