--- a/journal.html
+++ b/journal.html
@@ -8,6 +8,24 @@
 <h1> designing my homepage </h1>
 <p1> i started working on my homepage and i'm playing around with different designs and styles. molly has been helping me figure out to hover over an image to transition it into a gif. it looks cool so far but i will probably continue to change it. im glad i am starting to learn some basics so i can continue to use code like this. </p1>
 
+<h1> project for dad </h1>
+<p2> this was my first real project and i used similar code to the class demo of when we moved the div around the screen. i made the photo of me and my dad as the div that moves around and i made the map a background. in the console it stores where the image lands on the map! i'm really enjoying coding so far! </p2>
+
+<h1> animation </h1>
+<p2> i used four sqaures moving arounf for my first animation. the sqaures all move together and they change colors inbetween moving from side to side! </p2>
+
+<h1> color/square project </h1>
+<p2> for this project i made lots of divs that change with random colors. i first only made a couple rows then i copied the code enough times to fill the whole screen with squares. </p2>
+
+<h1> music player </h1>
+<p2> this was the hardest project i've made so far but also my favorite. i used songs i downloaded from the internet and i also downloaded an image of the album cover. i gave the mp3 files all the same name as the cover image to keep thigs organized. then i coded the image to play the mp3 file when it was tapped. i added a little play button for design purposes and included nine songs that i've been listeneing to recently. </p2>
+
+<h1> valentines day card </h1>
+<p2> i made this card for my camp friends! i used similar code from my square quilt project and added a title! after i pushed it online i sent it to our groupchat and they loved it! happy valentines day! </p2>
+
+<h1> car project </h1>
+<p2> after discussing with my friend in class possible solutions, i realized i needed to add an event listener. i ran into a bug and learned on w3 schools that it would help to add an if/else statment if i wanted to change the image each time the direction of the car changed. i used two seperate images, for the opposite direction i just mirrored the original image. </p2>
+
 
 
 
