new project for sister

--- a/barbiecar.html
+++ b/barbiecar.html
@@ -5,12 +5,14 @@
 	<style>
 		#buggy {
 			width: 700px;
+			transition: 0.5s;
 			height: 700px;
 			background-color: white;
-			right: 10px;
+			right: 20px;
 			position: absolute;
 			background-image: url('barbiecar2.png');
-			background-size: cover;
+			background-size: contain;
+			background-repeat: no-repeat;
 		}
 	</style>
 </head>
