--- a/projects.html
+++ b/projects.html
@@ -18,7 +18,7 @@ body{
   display: inline-block;
 
   font-family: varsity;
-  font-size: 1px;
+  font-size: .1px;
   text-align:left;
 
 
@@ -195,6 +195,27 @@ body{
   
 }
 
+.buttonten{
+  height: 455px;
+  width: 27%;
+
+  display: inline-block;
+
+  font-family: varsity;
+  font-size: .1px;
+  text-align:left;
+
+
+
+  transition:.5s;
+
+  background-image: url(lexicover.png);
+  background-size: contain;
+  background-repeat: no-repeat;
+  
+}
+
+
   </style>
 </head>
 <body>
@@ -250,6 +271,12 @@ body{
 
   <a href="barbiecar.html">
   <div class="buttonnine">
+    project
+  </div>
+  </a>
+
+  <a href="lexi.html">
+  <div class="buttonten">
     project
   </div>
   </a>
