--- a/projects.html
+++ b/projects.html
@@ -319,6 +319,12 @@ body{
   </div>
   </a>
 
+   <a href="jakeslideshow.html">
+  <div class="buttoneleven">
+    project
+  </div>
+  </a>
+
  <a href="circles.html">
   <div class="buttontwelve">
     project
