--- a/projects.html
+++ b/projects.html
@@ -254,6 +254,46 @@ body{
   background-repeat: no-repeat;
   
 }
+
+.buttonthirteen{
+  height: 455px;
+  width: 27%;
+
+  display: inline-block;
+
+  font-family: varsity;
+  font-size: .1px;
+  text-align:left;
+
+
+
+  transition:.5s;
+
+  background-image: url(tswiftcover.jpg);
+  background-size: contain;
+  background-repeat: no-repeat;
+  
+}
+
+.buttonfourteen{
+  height: 455px;
+  width: 27%;
+
+  display: inline-block;
+
+  font-family: varsity;
+  font-size: .1px;
+  text-align:left;
+
+
+
+  transition:.5s;
+
+  background-image: url(tswiftpresentation.jpg);
+  background-size: contain;
+  background-repeat: no-repeat;
+  
+}
   </style>
 </head>
 <body>
@@ -330,6 +370,19 @@ body{
     project
   </div>
   </a>
+
+   <a href="swiftyfinalproject.html.html">
+  <div class="buttonthirteen">
+    project
+  </div>
+  </a>
+
+    <a href="./presentation/tswift.html">
+  <div class="buttonfourteen">
+    project
+  </div>
+  </a>
+
 
 </center>
 
