--- a/projects.html
+++ b/projects.html
@@ -371,7 +371,7 @@ body{
   </div>
   </a>
 
-   <a href="swiftyfinalproject.html.html">
+   <a href="swiftyfinalproject.html">
   <div class="buttonthirteen">
     project
   </div>
